# pico-temperature-tester

./: CMakeLists.txt  LICENSE  README.md  temp-tester.c
